--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,3 @@
 name: MylesIsCool-t2
-main: com.tenjava.entries.MylesIsCool.t2.TenJava
+main: us.myles.tenjava.Plugin
 version: '${project.version}'
