Apply to moon...

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,4 @@
-name: MylesIsCool-t2
+name: LunarLanding
 main: us.myles.tenjava.Plugin
 version: '${project.version}'
+description: Goto the moon...
